--- a/templates/login.html
+++ b/templates/login.html
@@ -1,56 +1,44 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta>
-    <title>Crontab管理</title>
-    <link rel="icon" href="/static/img/facicon.ico">
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/static/css/nifty.min.css" rel="stylesheet">
-    <link href="/static/css/themify-icons.min.css" rel="stylesheet">
-    <link href="/static/css/magic-check.min.css" rel="stylesheet">
-    <link href="/static/css/pace.min.css" rel="stylesheet">
-    <script src="/static/js/pace.min.js"></script>
-    <script src="/static/js/jquery-2.2.4.min.js"></script>
-    <script src="/static/js/bootstrap.min.js"></script>
-    <script src="/static/js/nifty.min.js"></script>
 
-</head>
-<body>
-<div id="container" class="cls-container">
-    <div class="cls-content">
-        <div class="cls-content-sm panel">
-            <div class="panel-body">
-                <div class="mar-ver pad-btm">
-                    <h3 class="h4 mar-no">Account Login</h3>
-                    <p class="text-muted">Sign In to your account</p>
+{% block tab_title %}
+    Crontab管理系统登录
+{% endblock %}
+
+
+{% block content %}
+    <div id="container" class="cls-container">
+        <div class="cls-content">
+            <div class="cls-content-sm panel">
+                <div class="panel-body">
+                    <div class="mar-ver pad-btm">
+                        <h3 class="h4 mar-no">Account Login</h3>
+                        <p class="text-muted">Sign In to your account</p>
+                    </div>
+                    <form action="{% url 'login' %}" method="post">
+                        {% csrf_token %}
+                        <div class="form-group">
+                            <input name="username" type="text" class="form-control" placeholder="Username" autofocus>
+                        </div>
+                        <div class="form-group">
+                            <input name="password" type="password" class="form-control" placeholder="Password">
+                        </div>
+                        <div class="checkbox pad-btm text-left" style="display:none">
+                            <input id="demo-form-checkbox" class="magic-checkbox" type="checkbox">
+                            <label for="demo-form-checkbox">Remember me</label>
+                        </div>
+                        <button class="btn btn-primary btn-lg btn-block" type="submit">Sign In</button>
+                    </form>
                 </div>
-                <form action="/web/login/" method="post">
-                    {% csrf_token %}
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Username" autofocus>
-                    </div>
-                    <div class="form-group">
-                        <input type="password" class="form-control" placeholder="Password">
-                    </div>
-                    <div class="checkbox pad-btm text-left" style="display:none">
-                        <input id="demo-form-checkbox" class="magic-checkbox" type="checkbox">
-                        <label for="demo-form-checkbox">Remember me</label>
-                    </div>
-                    <button class="btn btn-primary btn-lg btn-block" type="submit">Sign In</button>
-                </form>
-            </div>
-            <div class="pad-all">
-                <a href="#" class="btn-link mar-rgt" style="display:none">Forgot password ?</a>
-                <a href="#" class="btn-link mar-lft" style="display:none">Create a new account</a>
+                <div class="pad-all">
+                    <a href="#" class="btn-link mar-rgt" style="display:none">Forgot password ?</a>
+                    <a href="#" class="btn-link mar-lft" style="display:none">Create a new account</a>
 
-                <div class="media pad-top bord-top">
+                    <div class="media pad-top bord-top">
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-</body>
-</html>
+{% endblock %}
+
