🎃Feat: 各个主页面添加，路径自动生成

--- a/templates/header.html
+++ b/templates/header.html
@@ -6,7 +6,7 @@
                     <a href="{% url 'home' %}" class="navbar-brand">
                         <img src="/static/img/logo.png" alt="Nifty Logo" class="brand-icon">
                         <div class="brand-title">
-                            <span class="brand-text">CRONTAB管理</span>
+                            <span href="{% url 'home' %}" class="brand-text">CRONTAB管理</span>
                         </div>
                     </a>
                 </div>
