--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -21,8 +21,10 @@
                         <li class="list-header">菜单栏</li>
 
                         <!--Menu list item-->
+
+
                         <li class="active-link">
-                            <a href="#">
+                            <a href="{% url 'home' %}">
                                 <i class="ti-home"></i>
                                 <span class="menu-title">主页</span>
                             </a>
@@ -30,7 +32,7 @@
 
                         <!--Menu list item-->
                         <li class="">
-                            <a href="#">
+                            <a href="{% url 'users' %}">
                                 <i class="ti-game"></i>
                                 <span class="menu-title">人员管理</span>
                             </a>
