🍄feat: 主机绑定任务开关

--- a/templates/base.html
+++ b/templates/base.html
@@ -36,6 +36,7 @@
     <script src="/static/js/jquery-2.2.4.min.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
     <script src="/static/js/nifty.min.js"></script>
+    <script src="/static/js/jquery.cookie-1.4.1.min.js"></script>
     {% block js %}
         {#your js or js file in here#}
     {% endblock %}
