--- a/templates/hosts.html
+++ b/templates/hosts.html
@@ -105,7 +105,7 @@
         <div id="content-container">
             <!--页面标题-->
             <div id="page-title">
-                <h1 class="page-header text-overflow">Expanded Navigation</h1>
+                <h1 class="page-header text-overflow">CRONTAB管理 / {{ path2 }}</h1>
                 <!--Searchbox-->
                 <div class="searchbox">
                     <div class="input-group custom-search-form">
